# CPUPathTracing

./: CMakeLists.txt  README.md  cpp_30.cpp  output.ppm  output_simple_rt.ppm  profile_log.txt
source/: CMakeLists.txt
source/include/: camera.hpp  film.hpp  model.hpp  ray.hpp  shape.hpp  sphere.hpp  spinlock.hpp  thread_pool.hpp  triangle.hpp
source/include/accelerate/: bounds.hpp
source/include/camera/: camera.hpp  film.hpp  ray.hpp
source/include/renderer/: base_renderer.hpp  normal_renderer.hpp
source/include/shape/: material.hpp  model.hpp  plane.hpp  scene.hpp  shape.hpp  sphere.hpp  triangle.hpp
source/include/thread/: thread_pool.hpp
source/include/util/: file_util.hpp  frame.hpp  profile.hpp  progress.hpp  randomGenerator.hpp  rgb.hpp
source/src/: camera.cpp  film.cpp  main.cpp  model.cpp  sphere.cpp  thread_pool.cpp  triangle.cpp
source/src/acceletate/: bounds.cpp
source/src/camera/: camera.cpp  film.cpp  ray.cpp
source/src/renderer/: base_renderer.cpp  normal_renderer.cpp  simple_rt_renderer.cpp
source/src/shape/: model.cpp  plane.cpp  scene.cpp  sphere.cpp  triangle.cpp
source/src/thread/: thread_pool.cpp
source/src/util/: frame.cpp  profile.cpp  progress.cpp
